<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TiendaOnline</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logoLogin"></string>
    <string name="usuarioLogin">Usuario</string>
    <string name="contrasenaLogin">Contraseña</string>
    <string name="inicair_sesionLogin">Inicair Sesión</string>
    <string name="iniciar_sesionLogin">iniciar_sesion</string>
    <string name="inicio_sesionLogin">Iniciar Sesion</string>
    <string name="title_activity_menu_principal">Menú Principal</string>
    <string name="bienvenidosMenuPrincipal">BIENVENIDOS</string>
    <string name="productosMenuPrincipal">Productos</string>
    <string name="carritoMenuPrincipal">Carrito</string>
    <string name="btnProductosMenuPrincipal"></string>
    <string name="btnCarritoMenuPrincipal"></string>
    <string name="btnCatalogosMenuPrincipal"></string>
    <string name="btnPedidosMenuPrincipal"></string>
    <string name="catalogosMenuPrincipal">Catalogos</string>
    <string name="pedidosMenuPrincipal">Pedidos</string>
    <string name="registrarseLogin">Registrarse</string>
    <string name="mi_perfilMenuPrincipal">Mi Perfil</string>
    <string name="txtmi_perfilMenuPrincipal">Mi Perfil</string>
    <string name="title_activity_registrar_cliente">Registrar Cliente</string>
    <string name="registro_clienteRegistroCliente">Registro Cliente</string>
    <string name="nombre_RegistroCliente">Nombre:</string>
    <string name="apellidos_RegistrarCliente">Apellidos:</string>
    <string name="cedula_RegistrarCliente">Cédula:</string>
    <string name="email_RegistrarCliente">Email:</string>
    <string name="direccion_RegistrarCliente">Dirección:</string>
    <string name="telefono_RegistrarCliente">Teléfono:</string>
    <string name="alias_RegistrarCliente">Alias:</string>
    <string name="contrasena_RegistrarCliente">Contraseña:</string>
    <string name="cancelarRegistroCliente">Cancelar</string>
    <string name="aceptarRegistroCliente">Aceptar</string>
    <string name="title_activity_catalogo">Catalogo</string>
    <string name="catalogoCatalogo">Catálogo</string>
    <string name="title_activity_item_catalogo">ItemCatalogoActivity</string>
    <string name="nombre_catalogoItemCatalogo">Nombre Catalogo</string>
    <string name="title_activity_productos">Productos</string>
    <string name="productosProductos">Productos</string>
    <string name="btnBuscarProductos"></string>
    <string name="title_activity_item_productos">ItemProductosActivity</string>
    <string name="nombreItemProducto">Nombre</string>
    <string name="precioItemProducto">Precio</string>
    <string name="logoProducto"></string>
    <string name="title_activity_detalle_producto">Detalle</string>
    <string name="nombre_productoDetalleProducto">Nombre Producto</string>
    <string name="precio_productoDetalleProducto">Precio Producto</string>
    <string name="descripcion_productoDetalleProducto">Descripcion Producto</string>
    <string name="agregar_al_carritoDetalleProductos">Agregar al carrito</string>
    <string name="btnAgregarCarritoDetalle"></string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="perfilPerfil">Perfil</string>
    <string name="logoPerfil"></string>
    <string name="usuarioPerfil">Usuario</string>
    <string name="nombre_Perfil">Nombre:</string>
    <string name="apellidos_Perfil">Apellidos:</string>
    <string name="cedula_Perfil">Cédula:</string>
    <string name="email_Perfil">Email:</string>
    <string name="direccion_Perfil">Dirección:</string>
    <string name="telefono_Perfil">Teléfono:</string>
    <string name="textviewNombrePerfil">TextView</string>
    <string name="textviewApellidosPerfil"></string>
    <string name="textviewApellidoPerfil">textview</string>
    <string name="textviewCedulaPerfil">textview</string>
    <string name="textviewEmailPerfil">textview</string>
    <string name="textviewDireccionPerfil">textview</string>
    <string name="textviewTelefonoPerfil">textview</string>
    <string name="cambiar_contrasenaPerfil">Cambiar Contraseña</string>
    <string name="title_activity_carrito">Carrito de Compras</string>
    <string name="carritoCarrito">Carrito</string>
    <string name="descripcionCarrito">Descripcion</string>
    <string name="cantidadCarrito">Cantidad</string>
    <string name="precioCarrito">Precio</string>
    <string name="totalEnProd">Total</string>
    <string name="total_Carrito">Total:</string>
    <string name="textviewTotalCarrito">TextView</string>
    <string name="cancelarCarrito">Cancelar</string>
    <string name="aceptarCarrito">Aceptar</string>
    <string name="title_activity_detalle_pedido">Detalle Pedido</string>
    <string name="detalle_pedidoDetallePedido">Detalle Pedido</string>
    <string name="fecha_DetallePedido">Fecha:</string>
    <string name="textviewFechaDetallePedido">textview</string>
    <string name="descripcionDetallePedido">Descripción</string>
    <string name="cantidadDetallePedido">Cantidad</string>
    <string name="precioDetallePedido">Precio</string>
    <string name="total_DetallePedido">Total:</string>
    <string name="textviewTotalDetallePedido">textview</string>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="pedidosPedidos">pedidos</string>
    <string name="title_activity_item_pedidos">ItemPedidosActivity</string>
    <string name="textviewItemPedido">TextView</string>
    <string name="title_activity_accesando">Accesando</string>
    <string name="iniciando_sesionAccesando">Iniciando Sesion......</string>
    <string name="logoAccesando"></string>
    <string name="title_activity_item_productos_detalle_pedido">ItemProductosDetallePedidoActivity</string>
    <string name="textviewDescripcionPItemDetallePedido">TextView</string>
    <string name="textviewCantidadPItemDetallePedido">textview</string>
    <string name="textviewPrecioPItemDetallePedido">textview</string>
    <string name="title_activity_menu_pedidos">Menu Pedidos</string>
    <string name="rechazadosPedidos">Rechazados</string>
    <string name="realizadosPedidos">Realizados</string>
    <string name="logoPedido"></string>
    <string name="pedidosMenuPedidos">Pedidos</string>
    <string name="realizadosPedidosMenu">Realizados</string>
    <string name="rechazadosPedidosMenu">Rechazados</string>
    <string name="nombreProducto">Nombre</string>
    <string name="subtotalDetalle">Subtotal:</string>
    <string name="textviewDetallePedido">TextView</string>
    <string name="cantidad_Producto">Cantidad:</string>
    <string name="mi_perfilBtnPerfil">Mi Perfil</string>
    <string name="registrarsebtnLogin">Registrarse</string>
    <string name="title_activity_item_carrito">ItemCarritoActivity</string>
    <string name="nombreItemCarrito">Nombre</string>
    <string name="descripcionItemCarrito">Descripcion</string>
    <string name="cantidadItemCarrito">Cantidad</string>
    <string name="precioItemCarrito">Precio</string>
    <string name="nombreItemCarritoModificar">Nombre:</string>
    <string name="descripcionItemCarritoModificar">Descripcion:</string>
    <string name="cantidadItemCarritoModificar">Cantidad:</string>
    <string name="precioItemCarritoModificar">Precio:</string>
    <string name="mensajeCarroCompras">Modificar cantidad de productos deseados.</string>
    <string name="nuevaCantidad">Cantidad:</string>
    <string name="aceptarCambios">Aceptar cambios</string>
    <string name="cancelarCambios">Cancelar</string>

    <string-array name="MenuPedidos">
        <item>PENDIENTE</item>
        <item>REALIZADO</item>
        <item>RECHAZADO</item>
    </string-array>

    <string name="nombre_DetallePedido">Nombre:</string>
    <string name="textviewNombreDetallePedido">TextView</string>
    <string name="cedula_DetallePedido">Cédula:</string>
    <string name="textviewCedulaDetallePedido">TextView</string>
    <string name="pedido_n_DetallePedido">Pédido N:</string>
    <string name="textviewNumDetallePedido">TextView</string>
    <string name="iva_DetallePedido">IVA (%):</string>
    <string name="textviewIVADetallePedido">TextView</string>
    <string name="guardarCarrito">Guardar</string>
    <string name="cerrar_sesionPerfil">Cerrar Sesion</string>
    <string name="cerrar_sesi_nLogin">Cerrar Sesión</string>
    <string name="title_activity_porducto_seleccionado_modificar">PorductoSeleccionadoModificarActivity</string>
    <string name="p_didosPedidos">Pédidos</string>
    <string name="categoriasMenuPrincipal">Categorias</string>
    <string name="categoriaLogin">Categoria</string>
    <string name="todos_los_productosLogin">Todos los productos</string>
    <string name="textviewSubtotalDetallePedido">Textview</string>
    <string name="_SignoDolar">$$</string>
    <string name="textviewTotalPedido">textview</string>
    <string name="nombre_EditarProducto">Nombre:</string>
    <string name="textviewNombreProductoEditar">Textview</string>
    <string name="descripcion_EditarProducto">Descripcion:</string>
    <string name="textviewDescripcionProductoEditar">Textview</string>
    <string name="cantidad_EditarProducto">Cantidad:</string>
    <string name="textviewCantidadProductoEditar">Textview</string>
    <string name="precio_EditarProducto">Precio:</string>
    <string name="textviewPrecioProductoEditar">Textview</string>
    <string name="subtotal_EditarProducto">Subtotal:</string>
    <string name="textviewSubtotalProductoEditar">Textview</string>
    <string name="nueva_cantidad_EditarProducto">Nueva cantidad:</string>
    <string name="detalle_del_productoDatosProducto">Detalle del Producto</string>
    <string name="aceptarEditarProducto">Aceptar</string>
    <string name="agregar_al_carritoCarrito">Agregar al carrito</string>
    <string name="_signodolarDetalleproducto">$$</string>
    <string name="subtotalDetallePedido">Subtotal:</string>
    <string name="p_didoDetallePedido">Pédido</string>
    <string name="categoriaProductosCategoria">Categoria</string>
    <string name="nombre_PedidoCarrito">Nombre:</string>
    <string name="p_didoPedidoCarrito">Pédido</string>
    <string name="textviewnombre_pedido_carrito">Textview</string>
    <string name="c_dula_PedidoCarrito">Cédula</string>
    <string name="textviewCedulaPedidoCarrito">Textview</string>
    <string name="Fecha_PedidoCarrito">Fecha:</string>
    <string name="textviewFechaPedidoCarrito">Textview</string>
    <string name="extviewPedidoCarrito">Textview</string>
    <string name="textviewIvaPedidoCarrito">Textview</string>
    <string name="subtotal_PedidoCarrito">Subtotal:</string>
    <string name="iva_12_PedidoCarrito">Iva (12%):</string>
    <string name="textviewCedulaPerfilUsuario">Textview</string>
    <string name="tel_fono_PerfilUsuario">Teléfono:</string>
    <string name="textviewApellidosPerfilUsuario">Textview</string>
    <string name="textviewPerfilUsuario">Textview</string>

</resources>
