<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CarritoActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="418dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewPedidoCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/p_didoPedidoCarrito"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/NombrePedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_PedidoCarrito"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewNombrePedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textviewnombre_pedido_carrito"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/cedulaPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_dula_PedidoCarrito"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewCedulaPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textviewCedulaPedidoCarrito"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/FechaPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fecha_PedidoCarrito"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewFechaPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textviewFechaPedidoCarrito"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/carritoCarrito"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewNombreProductoDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcionCarrito"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewCantidadProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:text="@string/cantidadCarrito"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewPrecioProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:text="@string/precioCarrito"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewTotalEnProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:text="@string/totalEnProd"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewCarritoProductos"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:background="@android:color/holo_blue_light"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:textColor="@android:color/white"
            tools:ignore="NestedScrolling" >
        </ListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@android:color/holo_blue_light" >

            <TextView
                android:id="@+id/textViewSubtotalPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="18dp"
                android:text="@string/extviewPedidoCarrito" />

            <TextView
                android:id="@+id/textViewIvaPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewSubtotalPedidoCarrito"
                android:layout_below="@+id/textViewSubtotalPedidoCarrito"
                android:text="@string/textviewIvaPedidoCarrito" />

            <TextView
                android:id="@+id/textViewTotalCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/IvaPedidoCarrito"
                android:layout_centerHorizontal="true"
                android:text="@string/total_Carrito" />

            <TextView
                android:id="@+id/SubtotalPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/IvaPedidoCarrito"
                android:layout_alignLeft="@+id/textViewTotalCarrito"
                android:text="@string/subtotal_PedidoCarrito" />

            <TextView
                android:id="@+id/IvaPedidoCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewIvaPedidoCarrito"
                android:layout_alignBottom="@+id/textViewIvaPedidoCarrito"
                android:layout_alignLeft="@+id/textViewTotalCarrito"
                android:text="@string/iva_12_PedidoCarrito" />

            <TextView
                android:id="@+id/textViewTotalCarritoDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewTotalCarrito"
                android:layout_alignBottom="@+id/textViewTotalCarrito"
                android:layout_alignLeft="@+id/textViewIvaPedidoCarrito"
                android:text="@string/textviewTotalCarrito" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp" >

            <Button
                android:id="@+id/buttonCancelar"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/cancelarCarrito" />

            <Button
                android:id="@+id/buttonAceptar"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/buttonCancelar"
                android:layout_marginRight="17dp"
                android:layout_toLeftOf="@+id/buttonCancelar"
                android:background="@android:color/holo_blue_dark"
                android:onClick="GuardarCarrito"
                android:text="@string/guardarCarrito" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
