<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipalActivity" >

    <TextView
        android:id="@+id/textViewBienvenidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp"
        android:textStyle="italic"
        android:text="@string/bienvenidosMenuPrincipal" />

    <ImageView
        android:id="@+id/imageViewBtnProductos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textViewBienvenidos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/btnProductosMenuPrincipal"
        android:onClick="onProductos"
        android:src="@drawable/ic_btnproductos" />

    <ImageView
        android:id="@+id/imageViewBtnCatalogos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageViewBtnProductos"
        android:contentDescription="@string/btnCatalogosMenuPrincipal"
        android:onClick="onCategoria"
        android:src="@drawable/ic_btncatalogo" />

    <ImageView
        android:id="@+id/imageViewBtnCarrito"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/imageViewBtnProductos"
        android:layout_toRightOf="@+id/imageViewBtnProductos"
        android:contentDescription="@string/btnCarritoMenuPrincipal"
        android:onClick="onCarrito"
        android:src="@drawable/ic_carrito" />

    <ImageView
        android:id="@+id/imageViewBtnPedidos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageViewBtnProductos"
        android:layout_below="@+id/imageViewBtnCatalogos"
        android:contentDescription="@string/btnPedidosMenuPrincipal"
        android:onClick="onPedidos"
        android:src="@drawable/ic_btnpedidos" />

    <TextView
        android:id="@+id/textViewProductosProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBienvenidos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/productosMenuPrincipal" />

    <TextView
        android:id="@+id/textViewCatalogos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewBtnProductos"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/textViewPedidos"
        android:text="@string/categoriasMenuPrincipal"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewBtnProductos"
        android:layout_alignRight="@+id/imageViewBtnCarrito"
        android:layout_marginRight="14dp"
        android:text="@string/carritoMenuPrincipal"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewBtnPedidos"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" 
        android:text="@string/pedidosMenuPrincipal" />

    <Button
        android:id="@+id/buttonBtnPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewBtnPedidos"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:onClick="onPerfil"
        android:text="@string/mi_perfilBtnPerfil"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonCerrarlogin"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewBtnPedidos"
        android:layout_alignLeft="@+id/imageViewBtnCatalogos"
        android:background="@android:color/transparent"
        android:textSize="12sp"
        android:onClick="CerrarSesion"
        android:text="@string/cerrar_sesi_nLogin"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/holo_orange_dark" />

</RelativeLayout>
